--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-clicky-game",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://b3n0h.github.io/react-clicky-game/",
   "dependencies": {
     "@material-ui/core": "^3.6.2",
     "@material-ui/icons": "^3.0.1",
@@ -10,6 +11,8 @@
     "react-scripts": "2.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
